portal/static/less/gil.less
/* ... */
@media (min-width: 545px) {
    .is-nav-expanded figure.nav-overlay {
        display: block;
        visibility: visible;
    }
}
.side-nav {
    position: fixed;
    left: 0;
    top: 0;
    height: 100%;
    overflow: auto;
    background: #F7F7F7;
    color: #4A4A4A;
    width: 495px;
    z-index: 1000;
    left: -495px;
}
.side-nav__close {
    font-size: 30px;
    line-height: 1;
    color: #BFC0BD;
    position: absolute;
    right: 20px;
    top: 20px;
}
.side-nav__inner {
    padding: 65px;
}
@media (max-width: 767px) {
    .side-nav {
        top: 15%
    }
    .side-nav__inner {
        padding: 20px;
    }
    .is-nav-expanded .side-nav {
        width: 100%;
    }
    .side-nav * {
        font-size: 14px
    }
}
.is-nav-expanded .side-nav {
    left: 0;
}
.side-nav h3 {
    color: #BFC0BD;
    text-align: left;
    padding: 0 0 10px;
}
@media (max-width: 767px) {
    .side-nav h3 {
        font-size: 14px;
        line-height: 1;
    }
}
.side-nav h3:after {
    background: #BFC0BD;
    left: 0;
    margin-left: 0;
    width: 166px;
    margin: 10px 0 0;
}
.side-nav a {
    color: #4A4A4A;
}
.side-nav-items__button {
    float: left;
    margin: 15px 15px 0 0;
}
.side-nav-items__button a {
    color: #7C959E;
}
.side-nav-items__button a:hover {
    background: #D2D1C5;
}
.side-nav-items__item {
    display: block;
    font-size: 24px;
    line-height: 28px;
    font-weight: bold;
    margin: 0 0 20px;
}
.side-nave-items__item--selected a {
    color: #586c73;
}
.side-nav-items__item-disabled {
    opacity: 0.6;
}
@media (max-width: 767px) {
    .side-nav-items__item {
        font-size: 22px;
        line-height: 22px;
        margin-top: 1em
    }
}
.side-nav-items__item--has-icon a {
    padding-left: 45px;
    position: relative;
}
.side-nav-items__item--has-icon a svg {
    position: absolute;
    left: 0;
    top: -3px;
}
.side-nav-items__item--accentuated a {
    font-size: 23px;
    line-height: 22px;
}
.side-nav-items__item figure {
    font-size: 30px;
    line-height: 1;
    opacity: 0;
    top: 5px;
    margin-left: 5px;
}
.side-nav-items__item a {
    position: relative;
    display: inline-block;
}
.side-nav-items__item a:hover {
    cursor: pointer;
    color: #7C959E;
}
.side-nav-items__item a:hover figure {
    opacity: 1;
}
.home-intro {
    background: #32373C;
}
.is-logged-in .home-intro {
    padding-top: 92px;
}
@media (min-width: 769px) {
    .home-intro {
        padding-top: 140px;
        margin-top: -160px;
    }
}
@media (min-width: 769px) {
    .is-upper-banner-closed .home-intro {
        padding-top: 160px;
    }
}
.home-intro .more-arrow > a {
    color: #FFF;
}
.home-intro .more-arrow > a figure {
    color: #586C73;
}
.home-intro .more-arrow > a:hover {
    color: #7C959E;
}
.home-intro .intro {
    position: relative;
    float: left;
    min-height: 1px;
    padding-left: 7.5px;
    padding-right: 7.5px;
    width: 100%;
    text-align: center;
    padding-top: 20%;
    margin-bottom: 50px;
    background: #D7E1E3;
}
@media (max-width: 767px) {
    .home-intro .intro {
        padding-left: 45px;
        padding-right: 45px;
    }
}
@media (max-width: 899px) {
    .home-intro .intro {
        padding-top: 15%;
    }
}
.home-intro .intro__img {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 0;
}
@media (max-width: 767px) {
    .home-intro .intro__img--desktop {
        display: none;
    }
}
.home-intro .intro__img--mobile {
    display: none;
}
@media (max-width: 767px) {
    .home-intro .intro__img--mobile {
        display: block;
    }
}
@media (min-width: 769px) and (max-width: 900px) {
    .home-intro .intro {
        padding-bottom: 300px;
    }
}
@media (min-width: 901px) {
    .home-intro .intro {
        padding-bottom: 350px;
    }
}
.home-intro .intro__content {
    width: 100%;
    text-align: center;
    position: relative;
    z-index: 10;
    margin: 0 auto 50px;
    max-width: 760px;
}
.home-intro .intro__main {
    font-size: 38px;
    line-height: 1;
    margin: 0 0 30px;
    font-weight: bold;
}
@media (max-width: 767px) {
    .home-intro .intro__main {
        font-size: 24px;
        line-height: 1;
        margin: 0 0 10px;
    }
}
.home-intro .intro__sub {
    margin: 0;
    font-size: 26px;
    line-height: 34px;
}
@media (max-width: 767px) {
    .home-intro .intro__sub {
        font-size: 19px;
        line-height: 25px;
        margin: 0 0 10px;
    }
}
.home-intro .intro__down {
    color: #4A4A4A;
    display: block;
    margin-top: 50px;
}
.home-intro .intro__down figure {
    background: #EFECE5;
    border-radius: 100%;
    width: 52px;
    height: 52px;
    font-size: 30px;
    line-height: 1;
}
.home-intro .intro__down figure:before {
    position: relative;
    top: 13px;
}
.simple-page-content {
    text-align: left;
}
.simple-page-content h1 {
    text-align: center;
}
.simple-page-content p {
    font-size: 20px;
    line-height: 25px;
    margin: 0 0 20px;
}
.page-intro {
    text-align: center;
    background-size: cover;
    background-attachment: scroll;
    background-position: top center;
    padding: 0 40px 80px;
}
.page-intro a {
    color: #fff;
}
.page-intro a:hover {
    color: #f7f7f9;
}
@media (min-width: 769px) {
    .page-intro {
        padding-top: 160px;
        margin-top: -160px;
    }
}
@media (max-width: 767px) {
    .page-intro {
        padding-left: 45px;
        padding-right: 45px;
    }
}
.page-intro--about {
    background-color: #5D737A;
}
.page-intro--decision-support {
    background-color: #55666D;
}
.page-intro--symptom-tracker {
    background-color: #746E5E;
}
.page-intro--contact {
    background-color: #5E676E;
}
.page-intro--prostate-facts {
    background-color: #4C5246;
}
.page-intro--dark {
    color: #fff;
}
.page-intro--theme-brown-light {
    background: #4D4E4C;
    color: #fff;
}
.page-intro__main {
    font-size: 35px;
    line-height: 40px;
    font-weight: bold;
    margin-bottom: 25px;
}
.page-intro__main--accent {
    color: #D2D1C5;
}
/* ... */

